Voll krass zitiert

--- a/versuch_4/ergebnisse.tex
+++ b/versuch_4/ergebnisse.tex
@@ -62,7 +62,7 @@ Die Ergebnisse der Messung sind in Abbildung (\ref{fig:Geschwindigkeit}) dargest
 \caption{Abweichung der am Tachometer angezeigten und mit GPS gemessenen Geschwindigkeit}
 \label{fig:AbweichungGPSTacho}
 \end{figure}
-In Abbildung \ref{fig:AbweichungGPSTacho} ist die Differenz zwischen der am Tachometer angezeigten und mit GPS gemessenen Geschwindigkeit dargestellt. Es zeigt sich, dass die Abweichung relativ groß (im Bereich von 2-8 km/h) ist und mit der Geschwindigkeit zunimmt. Diese Abweichung liegt im Funktionsprinzip des Tachometers begründet. Tachometer messen die Drehzahl der Räder des Autos und errechnen daraus eine Geschwindigkeit. Zusätzlich zur prinzipiellen Ungenauigkeit der Messmethode verändern Abweichungen im Radumfang (z.B. durch Verschleiß oder Reifenwechsel) das Messergebnis. Diese Abweichungen wirken sich bei höheren Drehzahlen, d.h. höheren Geschwindigkeiten, stärker aus. Weiterhin ist gesetzlich vorgeschrieben, dass ein Tachometer aus Sicherheitsgründen niemals eine geringere Geschwindigkeit als die tatsächlich gefahrene anzeigen darf, weswegen Tachometer schon von Werk aus 'voreilen' und zu hohe Geschwindigkeiten anzeigen. Die gesetzlich maximal erlaubte Abweichung beträgt 10$\%$ der Geschwindigkeit + 4 km/h.
+In Abbildung \ref{fig:AbweichungGPSTacho} ist die Differenz zwischen der am Tachometer angezeigten und mit GPS gemessenen Geschwindigkeit dargestellt. Es zeigt sich, dass die Abweichung relativ groß (im Bereich von 2-8 km/h) ist und mit der Geschwindigkeit zunimmt. Diese Abweichung liegt im Funktionsprinzip des Tachometers begründet. Tachometer messen die Drehzahl der Räder des Autos und errechnen daraus eine Geschwindigkeit. Zusätzlich zur prinzipiellen Ungenauigkeit der Messmethode verändern Abweichungen im Radumfang (z.B. durch Verschleiß oder Reifenwechsel) das Messergebnis. Diese Abweichungen wirken sich bei höheren Drehzahlen, d.h. höheren Geschwindigkeiten, stärker aus. Weiterhin ist gesetzlich vorgeschrieben, dass ein Tachometer aus Sicherheitsgründen niemals eine geringere Geschwindigkeit als die tatsächlich gefahrene anzeigen darf, weswegen Tachometer schon von Werk aus 'voreilen' und zu hohe Geschwindigkeiten anzeigen. Die gesetzlich maximal erlaubte Abweichung beträgt 10$\%$ der Geschwindigkeit + 4 km/h.  \footnote{nach \cite{ho}}
 \begin{figure}
       \includegraphics[width=.9\textwidth]{images/AbweichungGPSPitot}
 \caption{Abweichung der mit dem Pitotrohr und mit GPS gemessenen Geschwindigkeit}
