--- a/versuch_4/theorie.tex
+++ b/versuch_4/theorie.tex
@@ -1,6 +1,8 @@
 \section{Theorie}
 \subsection{Strömende Flüssigkeiten und Gase}
 
+
+
 \subsubsection{Grundbetrachtungen}
 Strömende Flüssigkeiten und Gase unterscheiden sich hauptsächlich in zwei Punkten. Zum einen sind die Dichten von Flüssigkeiten um etwa drei Größenordnungen größer als bei Gasen. Zum anderen sind Flüssigkeiten in guter Näherung inkompressibel, was auf Gase nicht zutrifft.
 
@@ -153,7 +155,7 @@ Dabei ist $ {\bf \Delta} = \nabla \cdot \nabla = \frac{\partial^2}{\partial x^2}
 \begin{equation}
 \boxed{\rho (\frac{\partial}{\partial t} + \vec{u} \cdot \nabla ) \vec{u} = - {\bf grad}(p) + \rho \cdot \vec{g} + \eta {\bf \Delta} \vec{u}}
 \end{equation}
-Die Lösung der Navier-Stokes-Gleichung ist laut dem Clay Mathematics Institute sogar Teil der Millenium-Probleme. Deshalb werden wir uns hier nicht weiter mit der Navier-Stokes-Gleichung befassen.
+Die Lösung der Navier-Stokes-Gleichung ist laut dem Clay Mathematics Institute sogar Teil der Millenium-Probleme. Deshalb werden wir uns hier nicht weiter mit der Navier-Stokes-Gleichung befassen. \footnote{nach \cite[212ff.]{troeder}}
 
 \subsection{Strömungsmesstechnik}
 \subsubsection{Grundsätzliche Betrachtungen}
@@ -188,7 +190,10 @@ Zur Messung des statischen Drucks (siehe \aref{statisch}) wird ein vorne geschlo
 \end{figure}
 
 \subsubsection{Sonden zur gleichzeitigen Messung des Gesamtdrucks und des statischen Drucks (Prandtlsonden)}
-Eine Prandtlsonde (siehe \aref{prandtl}) ist Pitotrohr und statische Drucksonde in einem und kann daher direkt zur Messung des dynamischen Drucks verwendet werden. Bei der Prandtlsonde ist die Messung des statischen Drucks problematisch, da es wichtig ist, dass sich die Bohrungen hierfür nicht zu weit vorne, aber auch nicht zu weit hinten befindet. Beides führt zu Fehlern bei der Messung des statischen Drucks. Werden diese Bohrungen jedoch korrekt platziert, gleichen sich die Messfehler gerade gegenseitig aus. Hier soll jedoch nicht weiter auf diesen Aspekt eingegangen werden, da bei unseren Messungen ein Pitotrohr verwendet wurde.
+Eine Prandtlsonde (siehe \aref{prandtl}) ist Pitotrohr und statische Drucksonde in einem und kann daher direkt zur Messung des dynamischen Drucks verwendet werden. Bei der Prandtlsonde ist die Messung des statischen Drucks problematisch, da es wichtig ist, dass sich die Bohrungen hierfür nicht zu weit vorne, aber auch nicht zu weit hinten befindet. Beides führt zu Fehlern bei der Messung des statischen Drucks. Werden diese Bohrungen jedoch korrekt platziert, gleichen sich die Messfehler gerade gegenseitig aus. Hier soll jedoch nicht weiter auf diesen Aspekt eingegangen werden, da bei unseren Messungen ein Pitotrohr verwendet wurde.  \footnote{nach \cite{elmann}}
+
+
+
 %Abb. einfügen
 \begin{figure}
 	\centering
