--- a/versuch_4/theorie.tex
+++ b/versuch_4/theorie.tex
@@ -28,7 +28,7 @@ Dabei ist $ \vec{u} = \frac{d \vec{r}}{dt} $ die Strömungsgeschwindigkeit des V
 Eine Strömung heißt stationär, wenn $ \vec{u} ( \vec{r} , t) \equiv \vec{u} ( \vec{r} ) $ nicht von $t$ abhängt.
 Flüssigkeiten, bei denen $ \Vert \vec{F}_R \Vert \ll \Vert \vec{F}_p \Vert + \Vert \vec{F}_g \Vert $, bezeichnet man als ideale Flüssigkeiten, während Flüssigkeiten, bei denen $ \Vert \vec{F}_R \Vert \gg \Vert \vec{F}_p \Vert + \Vert \vec{F}_g \Vert $, als viskos oder zäh bezeichnet werden.
 
-Die Kurve $ \vec{r} (t) $ eines Flüssigkeitselements $ \Delta V $ nennt man Stromlinie. Strömungen heißen laminar, wenn sich die Stromlinien nebeneinander bewegen und sich nicht vermischen. Laminare Strömungen liegen immer dann vor, wenn die inneren Reibungskräfte im Vergleich zu den anderen Kräften groß sind. Sind die inneren Reibungskräfte allerdings klein im Vergleich zu Kräften, wie z.B. solche die an Hindernissen auftreten, bilden sich Wirbel. Solche Strömungen bezeichnet man als turbulent.
+Die Kurve $ \vec{r} (t) $ eines Flüssigkeitselements $ \Delta V $ nennt man Stromlinie. (Abb. \ref{fig:8-1}) Strömungen heißen laminar, wenn sich die Stromlinien nebeneinander bewegen und sich nicht vermischen. (Abb. \ref{fig:8-5}) Laminare Strömungen liegen immer dann vor, wenn die inneren Reibungskräfte im Vergleich zu den anderen Kräften groß sind. Sind die inneren Reibungskräfte allerdings klein im Vergleich zu Kräften, wie z.B. solche die an Hindernissen auftreten, bilden sich Wirbel. Solche Strömungen bezeichnet man als turbulent. (Abb. \ref{fig:8-6})
 
 \begin{figure}
         \includegraphics[width=.9\textwidth]{images/8-1}
@@ -94,7 +94,7 @@ Aufgrund der Gleichungen (\ref{form:Newton}) und (\ref{form:herleitung euler}) e
 Diese Gleichung nennt man die Euler-Gleichung. Sie bildet die Grundlage der Hydrodynamik idealer Flüssigkeiten.
 
 \subsubsection{Die Bernoulli-Gleichung}
-Hier wird ein Fluid (Flüssigkeit oder Gas) betrachtet, das horizontal durch ein Rohr mit veränderlichem Querschnitt fließt. Die Bernoulli-Gleichung folgt dann aus der Energieerhaltung. Strömt ein Fluid durch ein Rohr, dessen Querschnitt variabel ist, so muss das Fluid aufgrund der Kontinuitätsgleichung \ref{form:Kontinuitätsgl.} an Stellen mit kleinerem Querschnitt schneller fließen. Ein Volumen $ \Delta V_1 = A_1 \cdot \Delta x_1 $ hat dort also eine größere kinetische Energie.
+Hier wird ein Fluid (Flüssigkeit oder Gas) betrachtet, das horizontal durch ein Rohr mit veränderlichem Querschnitt fließt. (Abb. \ref{fig:8-8}) Die Bernoulli-Gleichung folgt dann aus der Energieerhaltung. Strömt ein Fluid durch ein Rohr, dessen Querschnitt variabel ist, so muss das Fluid aufgrund der Kontinuitätsgleichung \ref{form:Kontinuitätsgl.} an Stellen mit kleinerem Querschnitt schneller fließen. Ein Volumen $ \Delta V_1 = A_1 \cdot \Delta x_1 $ hat dort also eine größere kinetische Energie.
 
 \begin{figure}
 		\centering
@@ -130,7 +130,7 @@ Da Gleichung (\ref{form:Pre-Bernoulli}) für beliebige Querschnitte gilt, folgt 
 \end{equation}
 $ p_0 $ heißt Gesamtdruck, $ p_S = \frac{1}{2} \rho u^2 $ heißt Staudruck und $p$ ist der statische Druck der strömenden Flüssigkeit.
 
-Verläuft die Strömung durch schräge Rohre, ergibt sich die allgemeinere Gleichung:
+Verläuft die Strömung durch schräge Rohre (Abb. \ref{fig:8-11}), ergibt sich die allgemeinere Gleichung:
 
 \begin{equation}
 p + \rho g z(x) + \frac{1}{2} \rho u^2(x) = p_0 = const.
