--- a/versuch_4/vorwort.tex
+++ b/versuch_4/vorwort.tex
@@ -1,11 +1,10 @@
 \section{Vorwort}
-=======
 In der Luftfahrt ist es oftmals wichtig. die Bewegungsgeschwindigkeit reltiv zur Luft genau zu bestimmen, da diese wesentlich 
 für etwa die auf das Flugerät wirkende Geschwindigkeit ist. Eine Geschwindigkeitsmessung via etwa GPS kann dies nicht leisten, 
 da sie diese nicht in der Lage ist, Winde relativ zum Erdboden zu berücksichtigen. Aus diesem Grund muss die Messung lokal am 
 Fluggerät vorgenommen werden. Zur Realisierung der Geschwindigkeitsmessung bietet sich ein Pitotrohr an, bei dem die 
 Relativgeschwindigkeit in der Luft mittels des sich ergebenden Staudrucks bestimmt wird. Eine weitere Anwendung dieser Art der 
 Geschwindigkeitsmessung findet sich im Formel-1-Sport, da auch hier für die Aerodynamik des Fahrzeugs die Relativgeschwindigkeit 
-zur Umgebungsluft und nicht die Geschwindigkeit "über Grund" von Bedeutung ist. 
-Das Pitot Rohr wurde nach dem Wasserbauingenieur Henri Pitot, der sich mit Strömungen in Kanälen auseinandersetzte, benannt.
+zur Umgebungsluft und nicht die Geschwindigkeit \enquote{über Grund} von Bedeutung ist. 
+Das Pitotrohr wurde nach dem Wasserbauingenieur Henri Pitot, der sich mit Strömungen in Kanälen auseinandersetzte, benannt.
 Im Flugzeugbau werden heute sowohl mechanische als auch elektronische Varianten der Messrohre eingesetzt. Im folgenden wird eine Sonde mechanischer Bauform betrachtet.
