--- a/versuch_4/theorie.tex
+++ b/versuch_4/theorie.tex
@@ -6,7 +6,7 @@
 \subsubsection{Grundbetrachtungen}
 Strömende Flüssigkeiten und Gase unterscheiden sich hauptsächlich in zwei Punkten. Zum einen sind die Dichten von Flüssigkeiten um etwa drei Größenordnungen größer als bei Gasen. Zum anderen sind Flüssigkeiten in guter Näherung inkompressibel, was auf Gase nicht zutrifft.
 
-Um die makroskopische Bewegung von Flüssigkeiten und Gasen beschreiben zu können, ist es nötig alle Kräfte zu kennen, die auf ein Volumenelement $ \Delta V $ wirken. Als Kräfte kommen dabei Kräfte durch Druckdifferenzen $ \vec{F}_p $, die Schwerkraft $ \vec{F}_g $ und Reibungskräfte $ \vec{F}_R $ zwischen Schichten des strömenden Mediums in Frage. Dabei gilt:
+Um die makroskopische Bewegung von Flüssigkeiten und Gasen beschreiben zu können, ist es nötig alle Kräfte zu kennen, die auf ein Volumenelement $ \Delta V $ wirken. Als Kräfte kommen dabei Kräfte durch Druckdifferenzen $ \vec{F}_p $, die Schwerkraft $ \vec{F}_g $ und Reibungskräfte $ \vec{F}_R $ zwischen Schichten des strömenden Mediums in Frage. Hier bezeichnet $p$ den Druck und $\rho$ die Dichte. Dabei gilt:
 
 \begin{equation}
 \vec{F}_p = -{\bf grad}(p) \cdot \Delta V
