Bild Versuchsaufbau kommentiert

--- a/versuch_4/versuchsdurchfuehrung.tex
+++ b/versuch_4/versuchsdurchfuehrung.tex
@@ -6,7 +6,7 @@ Um die Geschwindigkeiten des fahrenden Autos zu messen, wurde das Pitotrohr am D
 
 \begin{figure}
 \centering
-	\includegraphics[width=.8\textwidth]{images/rohre.jpg}
+	\includegraphics[width=.8\textwidth]{images/rohre-kommentiert.png}
 	\caption{Bild des Versuchsaufbaus auf dem Autodach}
 	\label{rohre}
 \end{figure}
