--- a/versuch_4/versuchsdurchfuehrung.tex
+++ b/versuch_4/versuchsdurchfuehrung.tex
@@ -1,7 +1,7 @@
-\section{Herstellung des Rohres}
+\subsection{Herstellung des Rohres}
 Für diesen Versuch wurde in einem CAD-Programm das Modell eines Pitotrohres erstellt und dieses in einem 3D-Drucker gedruckt. Nach einigen Versuchen haben wir es so geschafft, ein funktionsfähiges Pitot-Rohr herzustellen.
 
-\section{Messung der Fahrgeschwindigkeiten}
+\subsection{Messung der Fahrgeschwindigkeiten}
 Um die Geschwindigkeiten des fahrenden Autos zu messen, wurde das Pitotrohr am Dach des Autos befestigt (Siehe Abbildung \ref{rohre}), zusammen mit einer schon vorrätigen Prandtlsonde, welche zur Messung des statischen Druckes verwendet wurde. Diese sind mit einem Feinmanometer im Inneren des Autos verbunden worden. Mit einer ersten Kamera wurde der Stand des Manometers sowie parallel die von einem GPS-Sensor ausgegebene Geschwindigkeit aufgenommen (Siehe Abbildung \ref{messung}), mit einer zweiten die Anzeige des Tachometers. Die beiden Aufnahmen wurden über die Audiospur synchronisiert, um die drei Geschwindigkeiten zu jeweils einem bestimmten Zeitpunkt auswerten zu können.
 
 \begin{figure}
