--- a/versuch_4/anhang.tex
+++ b/versuch_4/anhang.tex
@@ -74,17 +74,17 @@
     \toprule
     Geschwindigkeit Pitotrohr in m/s & Fehler & Abweichung &  \\
     \midrule
-    4,2   & 0,38290435 & 0,4   &  \\
-    5,7   & 0,28396947 & 0,5   &  \\
-    7     & 0,2318601 & 0,4   &  \\
-    8,5   & 0,18931298 & 0,5   &  \\
-    10,6  & 0,15178806 & 0,5   &  \\
-    12,5  & 0,12894389 & 0,6   &  \\
-    13,4  & 0,12053833 & 0,6   &  \\
-    15,7  & 0,10300655 & 0,4   &  \\
-          &       & 0,4875 & Mittelwert \\
-          &       & 0,0834523 & Standardabweichung \\
-          &       & 0,02950484 & st. Fehler \\
+    4,2   & 0,38 & 0,4   &  \\
+    5,7   & 0,28 & 0,5   &  \\
+    7     & 0,23 & 0,4   &  \\
+    8,5   & 0,19 & 0,5   &  \\
+    10,6  & 0,15 & 0,5   &  \\
+    12,5  & 0,13 & 0,6   &  \\
+    13,4  & 0,12 & 0,6   &  \\
+    15,7  & 0,10 & 0,4   &  \\
+          &       & 0,49 & Mittelwert \\
+          &       & 0,083 & Standardabweichung \\
+          &       & 0,030 & st. Fehler \\
     \bottomrule
     \end{tabular}%
   \label{tab:Kalibration2}%
@@ -100,21 +100,21 @@
           & 30 km/h & 50 km/h & 60 km/h & 70 km/h & 80 km/h & 90 km/h \\
     \midrule
           & GPS in kn & GPS in kn & GPS in kn & GPS in kn & GPS in kn & GPS in kn \\
-          & 13,15 & 25,2  & 29,09 & 36,28 & 40,65 & 45,8 \\
+          & 13,15 & 25,20  & 29,09 & 36,28 & 40,65 & 45,80 \\
           & 15,06 & 25,12 & 30,22 & 35,16 & 40,47 & 45,97 \\
           & 15,94 & 25,35 & 30,43 & 35,36 & 40,48 & 46,21 \\
-          & 15,08 & 24,3  & 30,15 & 35,59 & 40,21 & 45,93 \\
-          & 14,31 & 25,51 & 29,49 & 35,48 & 41,2  & 45,81 \\
-          & 13,78 & 24,83 & 30,95 & 35,67 & 39,66 & 44,5 \\
+          & 15,08 & 24,30  & 30,15 & 35,59 & 40,21 & 45,93 \\
+          & 14,31 & 25,51 & 29,49 & 35,48 & 41,20  & 45,81 \\
+          & 13,78 & 24,83 & 30,95 & 35,67 & 39,66 & 44,50 \\
           & 13,08 & 24,08 & 29,78 & 35,25 & 39,85 & 43,49 \\
           & 14,91 & 24,63 & 30,57 & 34,82 & 41,31 & 45,84 \\
-          & 14,9  & 24,73 & 29,99 & 35,97 & 41,93 & 44,24 \\
+          & 14,90  & 24,73 & 29,99 & 35,97 & 41,93 & 44,24 \\
           & 13,89 & 25,54 & 29,75 & 35,63 & 38,18 & 43,37 \\
           &       &       &       &       &       &  \\
-    Mittelwert & 14,41 & 24,929 & 30,042 & 35,521 & 40,394 & 45,116 \\
-    Standardabweichung & 0,92713417 & 0,50036542 & 0,54413642 & 0,41356042 & 1,03800235 & 1,10058772 \\
+    Mittelwert & 14,41 & 24,93 & 30,04 & 35,52 & 40,39 & 45,12 \\
+    Standardabweichung & 0,93 & 0,50 & 0,54 & 0,41 & 1,04 & 1,10 \\
           &       &       &       &       &       &  \\
-    statistischer Fehler & 0,29318557 & 0,15822944 & 0,17207104 & 0,13077929 & 0,32824517 & 0,3480364 \\
+    statistischer Fehler & 0,29 & 0,16 & 0,17 & 0,13 & 0,33 & 0,35 \\
     gesamter Fehler & 0,59318557 & 0,45822944 & 0,47207104 & 0,43077929 & 0,62824517 & 0,6480364 \\
           &       &       &       &       &       &  \\
     Mittelwert in km/h & 26,68732 & 46,168508 & 55,637784 & 65,784892 & 74,809688 & 83,554832 \\
