--- a/versuch_4/anhang.tex
+++ b/versuch_4/anhang.tex
@@ -115,10 +115,10 @@
     Standardabweichung & 0,93 & 0,50 & 0,54 & 0,41 & 1,04 & 1,10 \\
           &       &       &       &       &       &  \\
     statistischer Fehler & 0,29 & 0,16 & 0,17 & 0,13 & 0,33 & 0,35 \\
-    gesamter Fehler & 0,59318557 & 0,45822944 & 0,47207104 & 0,43077929 & 0,62824517 & 0,6480364 \\
+    stat. Fehler + Ablesefehler & 0,59 & 0,46 & 0,47 & 0,43 & 0,63 & 0,65 \\
           &       &       &       &       &       &  \\
-    Mittelwert in km/h & 26,68732 & 46,168508 & 55,637784 & 65,784892 & 74,809688 & 83,554832 \\
-    Fehler in km/h & 1,09857967 & 0,84864092 & 0,87427557 & 0,79780324 & 1,16351005 & 1,20016341 \\
+    Mittelwert in km/h & 26,68 & 46,17 & 55,64 & 65,78 & 74,81 & 83,55 \\
+    stat. Fehler + Ablesefehler in km/h & 1,10 & 0,85 & 0,87 & 0,80 & 1,16 & 1,20 \\
     \bottomrule
     \end{tabular}%
   \label{tab:GPS}%
@@ -157,29 +157,30 @@
           & 30 km/h & 50 km/h & 60 km/h & 70 km/h & 80 km/h & 90 km/h \\
     \midrule
           & u in m/s & u in m/s & u in m/s & u in m/s & u in m/s & u in m/s \\
-          & 9,19  & 12,59 & 14,39 & 18,89 & 19,19 & 21,69 \\
-          & 8,89  & 12,79 & 14,29 & 18,79 & 19,39 & 22,09 \\
-          & 8,79  & 13,09 & 14,19 & 18,69 & 19,89 & 22,29 \\
-          & 8,69  & 12,99 & 14,09 & 18,49 & 19,79 & 22,39 \\
-          & 8,49  & 12,89 & 14,49 & 18,39 & 19,49 & 22,59 \\
-          & 8,49  & 12,99 & 14,89 & 18,39 & 19,19 & 22,69 \\
-          & 8,39  & 13,29 & 15,29 & 18,29 & 19,39 & 22,89 \\
-          & 8,39  & 13,39 & 15,39 & 18,29 & 19,29 & 23,09 \\
-          & 8,39  & 13,39 & 15,29 & 18,19 & 19,39 & 22,79 \\
-          & 8,39  & 13,49 & 15,09 & 18,09 & 19,29 & 22,49 \\
+          & 9,2   & 12,6  & 14,4  & 18,9  & 19,2  & 21,7 \\
+          & 8,9   & 12,8  & 14,3  & 18,8  & 19,4  & 22,1 \\
+          & 8,8   & 13,1  & 14,2  & 18,7  & 19,9  & 22,3 \\
+          & 8,7   & 13,0    & 14,1  & 18,5  & 19,8  & 22,4 \\
+          & 8,5   & 12,9  & 14,5  & 18,4  & 19,5  & 22,6 \\
+          & 8,5   & 13,0    & 14,9  & 18,4  & 19,2  & 22,7 \\
+          & 8,4   & 13,3  & 15,3  & 18,3  & 19,4  & 22,9 \\
+          & 8,4   & 13,4  & 15,4  & 18,3  & 19,3  & 23,1 \\
+          & 8,4   & 13,4  & 15,3  & 18,2  & 19,4  & 22,8 \\
+          & 8,4   & 13,5  & 15,1  & 18,1  & 19,3  & 22,5 \\
           &       &       &       &       &       &  \\
-    Mittelwert & 8,61  & 13,09 & 14,74 & 18,45 & 19,43 & 22,5 \\
-    Standardabweichung & 0,27406406 & 0,29439203 & 0,50387388 & 0,26331224 & 0,23664319 & 0,4094712 \\
+    Mittelwert & 8,6  & 13,1  & 14,8 & 18,5 & 19,4 & 22,5 \\
+    Standardabweichung & 0,27 & 0,29 & 0,50 & 0,26 & 0,24 & 0,41 \\
           &       &       &       &       &       &  \\
-    stat.Fehler & 0,08666667 & 0,09309493 & 0,15933891 & 0,08326664 & 0,07483315 & 0,12948616 \\
-    ges. Fehler & 0,11666667 & 0,12309493 & 0,18933891 & 0,11326664 & 0,10483315 & 0,15948616 \\
+    stat.Fehler & 0,09 & 0,09 & 0,16 & 0,08 & 0,07 & 0,13 \\
+    stat.Fehler + Abweichung & 0,12 & 0,12 & 0,19 & 0,11 & 0,10 & 0,16 \\
           &       &       &       &       &       &  \\
-    Mittelwert in km/h & 30,996 & 47,124 & 53,064 & 66,42 & 69,948 & 81 \\
-    Fehler in km/h & 0,42  & 0,44314176 & 0,68162008 & 0,4077599 & 0,37739933 & 0,57415019 \\
+    Mittelwert in km/h & 31,0 & 47,2 & 53,1  & 66,5 & 70,0 & 81,0 \\
+    Fehler in km/h & 0,42  & 0,44 & 0,68 & 0,41 & 0,38 & 0,57 \\
     \bottomrule
     \end{tabular}%
   \label{tab:Geschwindigkeiten}%
 \end{table}%
+
 
 
 
