Fixes, Protokoll kompiliert

--- a/versuch_4/anhang.tex
+++ b/versuch_4/anhang.tex
@@ -115,10 +115,10 @@
     Standardabweichung & 0,93 & 0,50 & 0,54 & 0,41 & 1,04 & 1,10 \\
           &       &       &       &       &       &  \\
     statistischer Fehler & 0,29 & 0,16 & 0,17 & 0,13 & 0,33 & 0,35 \\
-    stat. Fehler + Ablesefehler & 0,59 & 0,46 & 0,47 & 0,43 & 0,63 & 0,65 \\
+    gesamter Fehler & 0,59 & 0,46 & 0,47 & 0,43 & 0,63 & 0,65 \\
           &       &       &       &       &       &  \\
     Mittelwert in km/h & 26,68 & 46,17 & 55,64 & 65,78 & 74,81 & 83,55 \\
-    stat. Fehler + Ablesefehler in km/h & 1,10 & 0,85 & 0,87 & 0,80 & 1,16 & 1,20 \\
+    gesamter Fehler in km/h & 1,10 & 0,85 & 0,87 & 0,80 & 1,16 & 1,20 \\
     \bottomrule
     \end{tabular}%
   \label{tab:GPS}%
