--- a/versuch_4/versuchsdurchfuehrung.tex
+++ b/versuch_4/versuchsdurchfuehrung.tex
@@ -4,13 +4,13 @@ Für diesen Versuch wurde in einem CAD-Programm das Modell eines Pitotrohres (s.
 \begin{figure}
 \centering
 	\includegraphics[width=.8\textwidth]{images/ks-zeichnung.png}
-	\caption{Skizze des Messsondenmodels}
+	\caption{Skizze des Messsondenmodells}
 	\label{skizze-ks}
 \end{figure}
 \begin{figure}
 \centering
 	\includegraphics[width=.8\textwidth]{images/ks-render.png}
-	\caption{3D-Rendering des Messsondenmodels}
+	\caption{3D-Rendering des Messsondenmodells}
 	\label{render-ks}
 \end{figure}
 \subsection{Messung der Fahrgeschwindigkeiten}
@@ -37,6 +37,6 @@ Um mit dem Feinmanometer messen zu können, muss es genau senkrecht zur Beschleu
 \begin{figure}
 \centering
 	\includegraphics[width=.5\textwidth]{images/aufhaengung.JPG}
-	\caption{Aufhänung des Feinmanometers}
+	\caption{Aufhängung des Feinmanometers}
 	\label{aufhängung}
 \end{figure}
