--- a/versuch_4/ergebnisse.tex
+++ b/versuch_4/ergebnisse.tex
@@ -80,6 +80,6 @@ In Abbildung \ref{fig:AbweichungGPSPitot} ist die Differenz zwischen der mit dem
 \item Für 80 und 90 km/h ergeben sich große negative Abweichungen. Möglicherweise ist hier aufgrund der hohen Strömungsgeschwindigkeit die Strömung auf dem Autodach nicht mehr laminar, bzw. es entstehen unvorhersehbare Turbulenzen.
 \item Die Abweichungen sind sowohl im Betrag als auch im Vorzeichen unterschiedlich und folgen keiner erkennbaren Verteilung. Eine mögliche Erklärung ist, dass die Strömungsgeschwindigkeit auf dem Autodach natürlich vom Wind beeinflusst wird. Je nach Windrichtung wird dann das Ergebnis größer oder kleiner.
 \end{enumerate}
-
+\newpage
 \section{Fazit}
 Insgesamt lässt sich sagen, dass die Messung trotz des simplen Aufbaus und der einfachen Konstruktion des Pitotrohrs gut funktioniert und erstaunlich genaue Ergebnisse geliefert hat. Als Geschwindigkeitsmesser für das Auto oder andere Fahrzeuge eignet sich das Pitotrohr aber doch nur bedingt, insbesondere da die Messergebnisse durch den Wind verfälscht werden können. Der Tachometer hat den klaren Vorteil, auch gegenüber dem eigentlich genaueren GPS, dass seine Anzeige quasi nicht von äußeren Einflüssen abhängt und damit zwar keine genauen, aber immer zuverlässige Werte liefert. Für die Messung von Strömungsgeschwindigkeiten, die z.B. bei Flugzeugen oder auch Rennwagen für die Aerodynamik entscheidend sind, ist es aber ideal geeignet. Es ist zu erwarten, dass mit professionell gebauten Systemen sehr gute Messgenauigkeiten erreicht werden können.
